--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
         //compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
         
         compile "org.neuroph:neuroph-core:2.9"
+        compile "org.encog:encog-core:3.3.0"
 }
 
 project.ext.mainClassName = "main.Main"
