--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,12 @@ dependencies {
         //compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
         
         compile "org.neuroph:neuroph-core:2.9"
+        
+        compile "com.apple:AppleJavaExtensions:1.4"
+        //compile "org.eclipse.swt:org.eclipse.swt.cocoa.macosx.x86_64:4.3"
+        //compile "de.codecentric.centerdevice:centerdevice-nsmenufx:1.0.0"
+        
+        //compile "org.controlsfx:fxsampler:1.0.9"
 }
 
 project.ext.mainClassName = "main.Main"
