--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'idea'
 
 ext {
         appName = "AI-Platform"
-        gdxVersion = '1.7.0'
+        gdxVersion = '1.9.1'
         roboVMVersion = '1.8.0'
         //box2DLightsVersion = '1.4'
         //ashleyVersion = '1.6.0'
@@ -19,40 +19,14 @@ repositories {
 }
 
 dependencies {
-        compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
-        compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
-        //compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
-        compile "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
-        //compile "com.badlogicgames.gdx:gdx-controllers-desktop:$gdxVersion"
-        //compile "com.badlogicgames.gdx:gdx-controllers-platform:$gdxVersion:natives-desktop"
-        compile "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
-        //compile "com.badlogicgames.gdx:gdx-bullet-platform:$gdxVersion:natives-desktop"
-		
-		compile "com.badlogicgames.gdx:gdx:$gdxVersion"
-        //compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
-        compile "net.dermetfan.libgdx-utils:libgdx-utils:0.13.1"
-        compile "net.dermetfan.libgdx-utils:libgdx-utils-box2d:0.13.1"
-        compile "com.kotcrab.vis:vis-ui:0.8.1"
-        //compile "com.badlogicgames.gdx:gdx-ai:$aiVersion"
-        //compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
-        compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
-        //compile "com.badlogicgames.gdx:gdx-bullet:$gdxVersion"
-        //compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
-        
         compile "org.neuroph:neuroph-core:2.9"
         
-        compile "com.apple:AppleJavaExtensions:1.4"
-        //compile "org.eclipse.swt:org.eclipse.swt.cocoa.macosx.x86_64:4.3"
-        //compile "de.codecentric.centerdevice:centerdevice-nsmenufx:1.0.0"
-        
-        //compile "org.controlsfx:fxsampler:1.0.9"
         compile "org.encog:encog-core:3.3.0"
         compile "com.apple:AppleJavaExtensions:1.4"
-
 }
 
-project.ext.mainClassName = "main.Main"
-project.ext.assetsDir = new File("assets");
+project.ext.mainClassName = "core.Main"
+project.ext.assetsDir = new File("src/main/java/");
 
 task run(dependsOn: classes, type: JavaExec) {
     main = project.mainClassName
