--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'java'
 
 ext {
         appName = "AI-Platform"
-        roboVMVersion = '1.8.0'
     }
 
 repositories {
@@ -23,7 +22,8 @@ project.ext.assetsDir = new File("src/assets")
 sourceSets.main.java.srcDirs = ['src']
 sourceSets.main.resources.srcDirs = ['src']
 
-task run(dependsOn: classes, type: JavaExec) {
+
+task run(dependsOn: ['classes'], type: JavaExec) {
     main = project.mainClassName
     classpath = sourceSets.main.runtimeClasspath
     standardInput = System.in
@@ -36,9 +36,15 @@ task dist(type: Jar) {
     from files(sourceSets.main.output.resourcesDir)
     from {configurations.compile.collect {zipTree(it)}}
     from files(project.assetsDir);
- 
+
     manifest {
         attributes 'Main-Class': project.mainClassName
     }
 }
 
+task copyDependencies(type: Copy) {
+    from configurations.runtime
+    into new File(buildDir, "dependencies")
+}
+
+tasks.build.dependsOn(copyDependencies)
